added CSS and JS files to public directory for front-end, udpated paths

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,9 +6,8 @@ html
         meta(name='viewport', content='width=device-width, initial-scale=1')
         // Bootstrap CSS
         link(rel='stylesheet' href='/bower_components/bootstrap/dist/css/bootstrap.css')
-        // Our CSS 
-        // ADD HREF LINK
-        link(rel='stylesheet', type='text/css', media='screen', href='#')
+        // Our CSS
+        link(rel='stylesheet', type='text/css', media='screen', href='/assets/style.css')
     body
         block content
         footer
@@ -22,4 +21,5 @@ html
         script(src='/bower_components/jquery/dist/jquery.js')
         // I don't think we need the bootstrap popper?
         script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
-        script(src='/js/rxApp.js')
+        // Our JS file
+        script(src='/assets/rxApp.js')
