--- a/views/new-user.pug
+++ b/views/new-user.pug
@@ -72,3 +72,9 @@ block content
                                 .col-md-12
                                     .float-right
                                         a#newUserSubmit.btn.userTypeBtn.btn-lg(href='#', role='button') Submit
+            // Return Home Row -- need on all pages except Home
+            .container
+                .row
+                    .col-md-12.text-center
+                        p.d-inline.mr-2 Confused or need to start over?
+                        a.btn.btn-sm.userTypeBtn.d-inline.returnHomeBtn(href='#', role='button') Return Home
