initializing the users.pug file, still needs to grab data to display email and medication combination options in the drop down menus as well as href links, also modified the new-user page yet again

--- a/views/new-user.pug
+++ b/views/new-user.pug
@@ -19,7 +19,7 @@ block content
             hr#rxHR.my-4
             // nested container for the form
             .container.mt-5
-                .row
+                .row.mb-5
                     .col-md-12
                         form
                             // First Name Input Field
