--- a/views/new-user.pug
+++ b/views/new-user.pug
@@ -70,10 +70,10 @@ block content
                             .form-row
                                 .col-md-12
                                     .float-right
-                                        a#newUserSubmit.btn.userTypeBtn.btn-lg(href='#', role='button') Submit
+                                        a#newUserSubmit.btn.userTypeBtn.btn-lg(href='/drug/new', role='button') Submit
             // Return Home Row -- need on all pages except Home
             .container
                 .row
                     .col-md-12.text-center
                         p.d-inline.mr-2 Confused or need to start over?
-                        a.btn.btn-sm.d-inline.returnHomeBtn(href='#', role='button') Return Home
+                        a.btn.btn-sm.d-inline.returnHomeBtn(href='/', role='button') Return Home
