--- a/views/users.pug
+++ b/views/users.pug
@@ -15,7 +15,7 @@ block content
                     p.lead Select your email address with the &quot;Find You&quot; drop down menu. Then select your medication combination on the next drop down and click Submit to view the drug interaction information for this selection.
                     br
                     p If you cannot find your email address then please click &quot;Return Home&quot; and click &quot;New User&quot; to get started.
-            .form-row.mb-5
+            .row.mb-5
                 // User selects Email
                 .dropdown.col-md-4.text-center
                     button#dropdownEXUFindYouButton.btn.btn-lg.dropdown-toggle.rxInputDD(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Find You
