--- a/views/users.pug
+++ b/views/users.pug
@@ -42,4 +42,4 @@ block content
             .row
                 .col-md-12.text-center
                     p.d-inline.mr-2 Confused or need to start over?
-                    a.btn.btn-sm.d-inline.returnHomeBtn(href='/', role='button') Return Home
+                    a.btn.btn-sm.returnHomeBtn(href='/', role='button') Return Home
