added a new link button row for user-friendliness that allows the user to return to page to add a new drug combination to account

--- a/views/interaction-results.pug
+++ b/views/interaction-results.pug
@@ -47,6 +47,11 @@ block content
                                             td blah 5
                                             td blah 6
                                             td blah 7
+            // Let User add another drug combo row
+            .row.my-3
+                .col-md-12.text-center
+                    p.d-inline.mr-2 Want to add or search another medication combination?
+                    a.btn.btn-sm.userTypeBtn(href='/drug/new', role='button') Click Here
             // Return Home Row -- need on all pages except Home
             .row.mt-3
                 .col-md-12.text-center
