added popper.js to layout.pug file before I switch to another branch

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,7 +21,8 @@ html
                         a#footerLinkRB.rxFooterLinks(href='#') API Members List
                         a.rxFooterLinks(href='https://github.com/amfirebaugh/fireballsProject2') GitHub Repo
         script(src='/bower_components/jquery/dist/jquery.js')
-        // I confirmed that bootstrap popper is included in the below file.
+        // Definitely need popper, and here it is:
+        script(src='/bower_components/popper.js/dist/umd/popper.js')
         script(src='/bower_components/bootstrap/dist/js/bootstrap.js')
         // Ion Icons
         script(src='https://unpkg.com/ionicons@4.4.4/dist/ionicons.js')
