--- a/views/new-user.pug
+++ b/views/new-user.pug
@@ -12,7 +12,7 @@ block content
             // Instruction Row
             .row
                 .col-md-12
-                    p.lead Fill out this quick form and click Submit to initialize your account. Then you&apos;ll automatically see the page where you can enter drug combinations that will save to your account!                   
+                    p.lead Fill out the form below to initialize your account. You can then begin entering your drug combinations that will save to your account!                   
                 br                   
                 p If you have any questions click the 
                 ion-icon#questIcon(name='help')
@@ -22,7 +22,7 @@ block content
             .container.mt-5
                 .row
                     .col-md-12
-                        form
+                        form(method="POST", action="/users/new")
                             // First Name Input Field
                             .form-group
                                 label.lead.mr-2(for='fName') First Name: 
@@ -71,10 +71,9 @@ block content
                             .form-row
                                 .col-md-12
                                     .float-right
-                                        a#newUserSubmit.btn.userTypeBtn.btn-lg(href='#', role='button') Submit
+                                        a#newUserSubmit.btn.userTypeBtn.btn-lg(href='/drug/new', role='button') Submit
             // Return Home Row -- need on all pages except Home
             .container
                 .row
                     .col-md-12.text-center
-                        p.d-inline.mr-2 Confused or need to start over?
-                        a.btn.btn-sm.userTypeBtn.d-inline.returnHomeBtn(href='#', role='button') Return Home
+                        a.btn.btn-sm.userTypeBtn.d-inline.returnHomeBtn(href='/', role='button') Return Home
