cleaned up interaction-results page a lot

--- a/views/interaction-results.pug
+++ b/views/interaction-results.pug
@@ -10,22 +10,18 @@ block content
                 .col-md-2
                     img#rxIcon(src='/assets/RX_icon.png')
             // Welcome text/instruction row
-            .row.mb-4
+            .row
                 .col-md-12
-                    p.lead Here are the most common drug interactions for [their selection].
-                    br
-                    p.d-inline.mr-3 Don&apos;t see any results? Try entering the medication names again and check spelling:
-                    a.btn.btn-sm.returnNewDrugBtn.userTypeBtn(href='/drug/new', role='button') Return to Form
+                    p.lead Here are the most common drug interactions for your profile!
             .row.mb-5
-                .col-md-12.text-center.mx-auto
-                    p.lead.d-inline Interactions: 
-            // Let User add another drug combo row
-            .row.my-3
+                .col-md-8.text-center.mx-auto
+                    p.lead
+                        strong Interactions: 
+            .row.my-5
                 .col-md-12.text-center
-                    p.d-inline.mr-2 Want to add or search another medication combination?
-                    a.btn.btn-sm.userTypeBtn(href='/drug/new', role='button') Click Here
+                    a.btn.btn-md.userTypeBtn.d-inline.mr-5(href='/drug/new', role='button') Add a New Combination
+                    a.btn.btn-md.returnNewDrugBtn.userTypeBtn(href='/users', role='button') View Another Combination
             // Return Home Row -- need on all pages except Home
             .row.mt-3
                 .col-md-12.text-center
-                    p.d-inline.mr-2 Confused or need to start over?
                     a.btn.btn-sm.returnHomeBtn(href='/', role='button') Return Home
