minor syntax fixes

--- a/views/new-user.pug
+++ b/views/new-user.pug
@@ -15,10 +15,8 @@ block content
                     p.lead Fill out the form below to initialize your account. You can then begin entering your drug combinations that will save to your account!                   
                 br                   
                 p If you have any questions click the 
-                ion-icon#questIcon(name='help')
-                |  icon next to each input for more information.    
-
-                    p.lead Fill out this quick form and click Submit to initialize your account. Then you&apos;ll automatically see the page where you can enter drug combinations that will save to your account!                   
+                ion-icon#questIcon(name='help') icon next to each input for more information.
+                    p.lead Fill out this quick form and click Submit to initialize your account. Then you&apos;ll automatically see the page where you can enter drug combinations that will save to your account!
                     br                   
                     p If you have any questions click the 
                         ion-icon#questIcon(name='help') icon next to each input for more information.    
@@ -50,7 +48,7 @@ block content
                                 // Age Dropdown
                                 .dropdown.mr-4
                                     label.lead.mr-2(for='age') Age: 
-                                    button#dropdownAgeButton.btn.dropdown-toggle.rxInputDD(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Select                          
+                                    button#dropdownAgeButton.btn.dropdown-toggle.rxInputDD(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Select
                                     .dropdown-menu(aria-labelledby='dropdownAgeButton')
                                         // id's are so we can grab them in JS file later if needed
                                         a#10.dropdown-item.rxAge 10-19
