added 404 error page and a few custom styles to this page since it's intentionally bland but still wanted to use bootstrap

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -67,3 +67,20 @@ body {
 .table {
     color: white;
 }
+
+/* 404 Error page */
+
+.error-template {
+    padding: 40px 15px;
+    text-align: center;
+    color: black;
+}
+
+.error-actions {
+    margin-top:15px;
+    margin-bottom:15px;
+}
+
+.error-actions .btn {
+    margin-right:10px;
+}
