added medical disclaimer to the layout pug file so it appears in the footer below our jumbotron of main content on each page, and this required custom css just for font color

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,7 +16,7 @@ html
             .container.mb-3
                 .row
                     .col-md-12.text-center
-                        p
+                        p#rxDisclaimer.clearfix All information, content, and material of this website is for informational purposes only and are not intended to serve as a substitute for the consultation, diagnosis, and/or medical treatment of a qualified physician or healthcare provider.
                         // ADD HREF LINK
                         a#footerLinkRB.rxFooterLinks(href='#') API Members List
                         a.rxFooterLinks(href='https://github.com/amfirebaugh/fireballsProject2') GitHub Repo
