updated New Drug Combo Page UI and minor styles

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -66,6 +66,13 @@ body {
     background-color: lightgray;
 }
 
+/* New Drug Page */
+
+#drug1, #drug2 {
+    width: 90%;
+}
+
+
 /* Results Page */
 
 .table {
