updated the sex options to male and female instead of Male and female

--- a/views/new-user.pug
+++ b/views/new-user.pug
@@ -55,7 +55,7 @@ block content
                                     label.lead.mr-2.pb-3(for='sex') Sex: 
                                         select#userSex.form-control(name='userSex', type='text')
                                             option.rxSex(value='')
-                                            option.rxSex(value='male') Male
+                                            option.rxSex(value='male') male
                                             option.rxSex(value='female') female
                             // Submit Button Row
                             .form-row
