updated Return Home path in 404.pug and new-user.pug files; completed reverted home.pug file back to what we want; and triple checked the IDs in the users.pug file

--- a/views/404.pug
+++ b/views/404.pug
@@ -9,4 +9,4 @@ block content
                     h2 404 Not Found
                     .error-details Sorry, an error has occured, Requested page not found!
                     .error-actions
-                    a.btn.btn-primary.btn-lg(href='/home') Return Home
+                    a.btn.btn-primary.btn-lg(href='/') Return Home
