--- a/views/users.pug
+++ b/views/users.pug
@@ -14,8 +14,8 @@ block content
                 .col-md-12.text-center.mx-auto
                     p.lead To confirm, what would you like to do? (You must click one to begin.)
                     a.btn.btn-lg.userTypeBtn.mx-3(href='/drug/new', role='button') Enter a New Search
-                    // ******************** CHECK ID!!!
-                    button#dropdownNDFindYouButton.btn.btn-lg.userTypeBtn.mx-3(type='button') View a Saved Search
+                    // ******************** CHECK ID!!! -- Good.
+                    button#dropdownEXUFindYouButton.btn.btn-lg.userTypeBtn.mx-3(type='button') View a Saved Search
             // Row for User Input
             .row.mb-5
                 p#newDrugInstructions.lead.mb-4 First select your email address. Next select the medication combination. Then click to view the drug interaction information.
@@ -23,25 +23,25 @@ block content
                 .col-md-4.text-center
                     form
                         .form-group
-                            // ******************** CHECK ID!!!
+                            // ******************** CHECK ID!!! -- Good.
                             select#emailReturn.custom-select.btn.btn-lg.rxInputDD
                                 option(value='') Email Addresses:
                 // User Selects Drug Combo
                 .col-md-4.text-center
                     form
                         .form-group
-                            // ******************** CHECK ID!!!
+                            // ******************** CHECK ID!!! -- Not in use.
                             select#IDK.custom-select.btn.btn-lg.rxInputDD
                                 option(value='') Medications:
                 // User clicks Submit
                 .col-md-4.text-center
-                    // ******************** CHECK ID!!!  ******* newDrugComboSubmit ??
+                    // ******************** CHECK ID!!! -- Good.
                     input#EXUSearchSubmit.btn.btn-lg.userTypeBtn(type='submit', value='See Results')
             // Results Row
             .row
                 #drugSearchResultsDiv.col-md-8.mx-auto.text-center.mb-4
                     // (Allie Edit:) Just display results (not replacing the drug name results)
-                    // ******************** CHECK ID!!!
+                    // ******************** CHECK ID!!! -- Good.
                     div#drugInteractionsReturn
             // Return Home Row -- need on all pages except Home
             .row
