updated href link to API Members Link in layout.pug file

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html
                     .col-md-12.text-center
                         p#rxDisclaimer.clearfix All information, content, and material of this website is for informational purposes only and are not intended to serve as a substitute for the consultation, diagnosis, and/or medical treatment of a qualified physician or healthcare provider.
                         // ADD HREF LINK
-                        a#footerLinkRB.rxFooterLinks(href='#') API Members List
+                        a#footerLinkRB.rxFooterLinks(href='/usersEmail') API Members List
                         a.rxFooterLinks(href='https://github.com/amfirebaugh/fireballsProject2') GitHub Repo
         script(src='/bower_components/jquery/dist/jquery.js')
         // Definitely need popper, and here it is:
